src/objects/MUSW__Fund__c.object
<CustomObject>
    <description>Deprecated. Track surety Bonds to assure performance, etc.</description>
    <fields>
        <fullName>MUSW__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Planning_Application__c</referenceTo>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Expiry_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Insurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Underwriter of fund</description>
        <inlineHelpText>Surety</inlineHelpText>
        <label>Insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Funds_Insured</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Issue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount (Dollars)</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Full_Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labor &amp; Materials</fullName>
                    <default>true</default>
                    <label>Labor &amp; Materials</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bond</fullName>
                    <default>true</default>
                    <label>Bond</label>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Deposit Certificate</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bond.</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>